kuber/lesson13/src/svc-web-app-back.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-back
  namespace: app
spec:
  selector:
    app: web-app-back
  ports:
    - name: back-svc
      protocol: TCP
      port: 80
      targetPort: back-port
