kuber/lesson13/src/svc-web-app-cache.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-cache
  namespace: app
spec:
  selector:
    app: web-app-cache
  ports:
    - name: back-svc
      protocol: TCP
      port: 80
      targetPort: cache-port
