kuber/lesson13/src/svc-web-app-front.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-front
  namespace: app
spec:
  selector:
    app: web-app-front
  ports:
    - name: front-svc
      protocol: TCP
      port: 80
      targetPort: front-port
